fixed dummy ontent spacing

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -164,6 +164,7 @@ header {
 }
 .main-text {
   grid-column: 2/4;
+  margin-bottom: 40px;
   align-content: center;
   .my-photo {
     max-width: 100%;
